--- a/src/style/pages/notice/notice.scss
+++ b/src/style/pages/notice/notice.scss
@@ -2,7 +2,17 @@
     display: flex;
     gap:3rem 1rem;
     flex-wrap:wrap;
+    margin-top:5rem;
     li{
         width: calc(33.33% - 1rem);
+    }
+}
+
+.more-btn{
+    &-box{
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        margin:5rem 0;
     }
 }
