--- a/src/style/pages/notice/notice.scss
+++ b/src/style/pages/notice/notice.scss
@@ -2,7 +2,7 @@
     display: flex;
     gap:3rem 1rem;
     flex-wrap:wrap;
-    margin-top:5rem;
+    margin:5rem 0;
     li{
         width: calc(33.33% - 1rem);
     }
